# kompilyator

./: README.md  pyproject.toml
docs/: language_spec.md
examples/: hello.src
lexer/: scanner.py  tokens.py
src/lexer/: main.py
tests/: test_runner.py
tests/lexer/invalid/: test_bad_and.expected  test_bad_and.src  test_bad_char.expected  test_bad_char.src  test_bad_id.expected  test_bad_id.src  test_bad_number.expected  test_bad_number.src  test_bad_or.expected  test_bad_or.src  test_empty.expected  test_only_space.expected  test_unterminated_comment.expected  test_unterminated_comment.src  test_unterminated_string.expected  test_unterminated_string.src  test_weird_chars.expected  test_weird_chars.src
tests/lexer/valid/: test_all_keywords.expected  test_all_keywords.src  test_comment_multi.expected  test_comment_multi.src  test_comment_single.expected  test_comment_single.src  test_delims.expected  test_delims.src  test_floats.expected  test_floats.src  test_identifiers.expected  test_identifiers.src  test_mixed_1.expected  test_mixed_1.src  test_mixed_2.expected  test_mixed_2.src  test_numbers.expected  test_numbers.src  test_ops_arith.expected  test_ops_arith.src  test_ops_log.expected  test_ops_log.src  test_ops_rel.expected  test_ops_rel.src  test_strings_escape.expected  test_strings_escape.src  test_strings_simple.expected  test_strings_simple.src  test_whitespace.expected  test_whitespace.src
